--- a/Views/Tickets/Delete.cshtml
+++ b/Views/Tickets/Delete.cshtml
@@ -1,76 +1,48 @@
 ﻿@model HelpDesk.Entities.Ticket
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "حذف تیکت";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Delete</h1>
+<div class="container my-5">
+    <div class="text-center mb-4">
+        <h1 class="display-6"><i class="fas fa-trash-alt text-danger me-2"></i>حذف تیکت</h1>
+        <p class="text-muted">آیا مطمئن هستید که می‌خواهید این تیکت را حذف کنید؟</p>
+    </div>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Ticket</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Title)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Title)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Status)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Status)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Priority)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Priority)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Description)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CreatedOn)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CreatedOn)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Version)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Version)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IsActive)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IsActive)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IsDeleted)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IsDeleted)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CreatedBy)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CreatedBy.Id)
-        </dd>
-    </dl>
-    
-    <form asp-action="Delete">
+    <div class="card shadow-sm rounded-4 border border-danger-subtle">
+        <div class="card-body">
+            <h5 class="card-title mb-4"><i class="fas fa-ticket-alt me-2 text-secondary"></i>اطلاعات تیکت</h5>
+            <dl class="row">
+                <dt class="col-sm-3">عنوان</dt>
+                <dd class="col-sm-9">@Html.DisplayFor(model => model.Title)</dd>
+
+                <dt class="col-sm-3">وضعیت</dt>
+                <dd class="col-sm-9">@Html.DisplayFor(model => model.Status)</dd>
+
+                <dt class="col-sm-3">اولویت</dt>
+                <dd class="col-sm-9">@Html.DisplayFor(model => model.Priority)</dd>
+
+                <dt class="col-sm-3">توضیحات</dt>
+                <dd class="col-sm-9">@Html.DisplayFor(model => model.Description)</dd>
+
+                <dt class="col-sm-3">تاریخ ایجاد</dt>
+                <dd class="col-sm-9">@Html.DisplayFor(model => model.CreatedOn)</dd>
+
+                <dt class="col-sm-3">فعال است؟</dt>
+                <dd class="col-sm-9">@Html.DisplayFor(model => model.IsActive)</dd>
+            </dl>
+        </div>
+    </div>
+
+    <form asp-action="Delete" class="mt-4 d-flex justify-content-between align-items-center flex-wrap gap-2">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <button type="submit" class="btn btn-danger px-4">
+            <i class="fas fa-trash me-1"></i> حذف تیکت
+        </button>
+        <a asp-action="Index" class="btn btn-secondary px-4">
+            <i class="fas fa-arrow-left me-1"></i> بازگشت به لیست
+        </a>
     </form>
 </div>
