#7 - Add SideBar && MyTickets to the project

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -63,6 +63,9 @@
                             <li class="nav-item">
                                 <a class="nav-link" asp-controller="Tickets" asp-action="Index">Tickets</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link" asp-controller="Users" asp-action="Index">Users</a>
+                            </li>
                         }
                     </ul>
 
